# Ranked-Choice-Voting

./: .gitignore  Cargo.toml  Shuttle.toml  schema.sql
actix/: Cargo.toml
actix/src/: db_types.rs  dto.rs  main.rs
leptos/: Cargo.toml  index.html
leptos/assets/: index.css
leptos/src/: app.rs  create_poll.rs  main.rs  poll.rs
